# cloudann

./: .clang-format  .gitignore  Readme.md  imgui.ini
Perceptral/: CMakeLists.txt
Perceptral/app/: cube.h  main.cpp
Perceptral/assets/shaders/: background.glsl  gridaxislines.glsl  point.glsl  unlit.glsl
Perceptral/include/Perceptral/: EntryPoint.h  Entrypoint.h  Perceptral.h
Perceptral/include/Perceptral/core/: Application.h  Camera.h  DeltaTime.h  Event.h  EventManager.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Macros.h  Time.h  Window.h
Perceptral/include/Perceptral/core/layers/: GameLayer.h  RenderLayer.h
Perceptral/include/Perceptral/core/math/: TransformUtils.h
Perceptral/include/Perceptral/io/: ImageExporter.h  PCDLoader.h  PLYLoader.h
Perceptral/include/Perceptral/platform/opengl/: OpenGLBuffer.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Perceptral/include/Perceptral/renderer/: Buffer.h  Material.h  MaterialLibrary.h  RenderAPI.h  RenderPass.h  RenderPipeline.h  Renderer.h  Shader.h  ShaderLibrary.h  VertexArray.h
Perceptral/include/Perceptral/renderer/features/: BackgroundRenderer.h  GridAxisLineRenderer.h
Perceptral/include/Perceptral/renderer/passes/: AxisLinePass.h  BackgroundPass.h  GridPass.h  PointCloudPass.h
Perceptral/include/Perceptral/rendering/: AxisLineRenderer.h  BackgroundRenderer.h  GridRenderer.h  PointCloudRenderer.h
Perceptral/include/Perceptral/resources/: PointCloud.h
Perceptral/include/Perceptral/scene/: Components.h  Entity.h  LabelDefinition.h  OrbitCameraController.h  PointCloud.h  ResourceManager.h  Scene.h  SceneManager.h  SceneObject.h  Scriptable.h
Perceptral/include/Perceptral/scene/components/: Camera.h  NativeScript.h  OrbitCameraController.h  PointCloud.h  Renderable.h  Script.h  Tag.h  Transform.h
Perceptral/include/Perceptral/scene/resources/: LabelDefinition.h  Material.h  Resource.h
Perceptral/include/Perceptral/scene/systems/: CameraControllerSystem.h  CameraSystem.h  RenderSystem.h  ScriptSystem.h  System.h
Perceptral/include/Perceptral/ui/: ImGuiLayer.h
Perceptral/src/core/: Application.cpp  Camera.cpp  LayerStack.cpp
Perceptral/src/core/layers/: GameLayer.cpp
Perceptral/src/io/: PCDLoader.cpp  PLYLoader.cpp
Perceptral/src/platform/opengl/: OpenGLRenderAPI.cpp
Perceptral/src/renderer/: RenderPipeline.cpp  Renderer.cpp
Perceptral/src/renderer/features/: BackgroundRenderer.cpp  GridAxisLineRenderer.cpp
Perceptral/src/rendering/: PointCloudRenderer.cpp
Perceptral/src/scene/: LabelDefinition.cpp  PointCloud.cpp  Scene.cpp  SystemManager.cpp
Perceptral/src/scene/components/: Transform.cpp
Perceptral/src/scene/systems/: CameraControllerSystem.cpp  CameraSystem.cpp  CameraSystem.h  RenderSystem.cpp  ScriptSystem.cpp
Perceptral/src/ui/: ImGuiLayer.cpp
cloudanntool/: .gitignore  CMakeLists.txt  Readme.md
cloudanntool/cmake/: CloudAnnotationCoreConfig.cmake.in
cloudanntool/examples/: pointcloud_viewer.cpp
cloudanntool/include/core/: Application.h  Camera.h  Engine.h  Event.h  EventManager.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Platform.h  Timestep.h  Window.h
cloudanntool/include/core/layers/: RenderLayer.h
cloudanntool/include/io/: ImageExporter.h  PCDLoader.h  PLYLoader.h  PointCloudExporter.h
cloudanntool/include/platform/opengl/: OpenGLBuffer.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
cloudanntool/include/renderer/: Buffer.h  RenderAPI.h  RenderPass.h  RenderPipeline.h  Renderer.h  Shader.h  ShaderLibrary.h  VertexArray.h
cloudanntool/include/renderer/passes/: AxisLinePass.h  BackgroundPass.h  GridPass.h  PointCloudPass.h
cloudanntool/include/rendering/: AxisLineRenderer.h  BackgroundRenderer.h  GridRenderer.h  PointCloudRenderer.h
cloudanntool/include/scene/: Components.h  Entity.h  LabelDefinition.h  PointCloud.h  Scene.h  SceneManager.h  SceneObject.h  Systems.h
cloudanntool/include/ui/: ImGuiLayer.h
cloudanntool/shaders/: axislines.glsl  grid.glsl  point.glsl
cloudanntool/src/core/: Application.cpp  Camera.cpp  Engine.cpp  EventManager.cpp  Input.cpp  LayerStack.cpp  Log.cpp  Renderer.cpp  Window.cpp
cloudanntool/src/core/layers/: RenderLayer.cpp
cloudanntool/src/io/: ImageExporter.cpp  PCDLoader.cpp  PLYLoader.cpp  PointCloudExporter.cpp
cloudanntool/src/platform/opengl/: OpenGLBuffer.cpp  OpenGLRenderAPI.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp
cloudanntool/src/renderer/: Buffer.cpp  RenderAPI.cpp  Renderer.cpp  Shader.cpp  ShaderLibrary.cpp  VertexArray.cpp
cloudanntool/src/rendering/: AxisLineRenderer.cpp  BackgroundRenderer.cpp  GridRenderer.cpp  PointCloudRenderer.cpp
cloudanntool/src/scene/: Components.cpp  Entity.cpp  LabelDefinition.cpp  PointCloud.cpp  Scene.cpp  SceneManager.cpp  Systems.cpp
cloudanntool/src/ui/: ImGuiLayer.cpp
pointcloudtool/: CMakeLists.txt  CMakePresets.json  README.md
pointcloudtool/include/: CameraController.h  PointCloudObject.h  SceneController.h  SelectionTool.h  UIManager.h
pointcloudtool/src/: CameraController.cpp  PointCloudObject.cpp  SceneController.cpp  SelectionTool.cpp  UIManager.cpp  main.cpp
